fix: [PIE-7183]: Error Message overflow issue fixed (#13159)

--- a/src/modules/10-common/components/DelegateSelectionLogs/DelegateSelectionLogs.module.scss
+++ b/src/modules/10-common/components/DelegateSelectionLogs/DelegateSelectionLogs.module.scss
@@ -17,4 +17,7 @@
   .delegateName {
     flex-shrink: 1 !important;
   }
+  .messageContainer {
+    word-wrap: break-word;
+  }
 }
